--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,7 @@
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>1.5.1.RELEASE</version>
+        <version>2.0.3.RELEASE</version>
         <relativePath />
     </parent>
     
@@ -40,21 +40,19 @@
         </dependency>
         
         <!-- redis -->  
-        <dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-data-redis</artifactId>
+		<dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-redis</artifactId>
+        </dependency>
+		<dependency>
+		    <groupId>redis.clients</groupId>
+		    <artifactId>jedis</artifactId>
+		    <version>2.8.0</version>
 		</dependency>
-<!--          <dependency>  
-            <groupId>org.springframework.boot</groupId>  
-            <artifactId>spring-boot-starter-data-redis</artifactId>  
-        </dependency> 
-        <dependency>
-    <groupId>org.springframework.data</groupId>
-    <artifactId>spring-data-redis</artifactId>
-    <version>1.6.2.RELEASE</version>
-</dependency> -->
-
-	 
+		<dependency>
+		        <groupId>org.springframework.boot</groupId>
+		        <artifactId>spring-boot-starter-amqp</artifactId>
+		</dependency>
         <dependency>  
 	    <groupId>org.apache.zookeeper</groupId>  
 	    <artifactId>zookeeper</artifactId>  
@@ -71,11 +69,16 @@
 		    <artifactId>zkclient</artifactId>  
 		    <version>0.1</version>  
 		</dependency>  
-		<dependency>
-			    <groupId>org.apache.rocketmq</groupId>
-			    <artifactId>spring-boot-starter-rocketmq</artifactId>
-			    <version>1.0.0-SNAPSHOT</version>
-			</dependency>
+<!-- 		<dependency>
+		    <groupId>com.rabbitmq</groupId>
+		    <artifactId>amqp-client</artifactId>
+		    <version>5.2.0</version>
+		</dependency> -->
+			<dependency>
+    <groupId>com.alibaba.csp</groupId>
+    <artifactId>sentinel-core</artifactId>
+    <version>0.1.1</version>
+</dependency>
 			<dependency>
     <groupId>org.projectlombok</groupId>
     <artifactId>lombok</artifactId>
