--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 
-server.port=8081
+server.port=8080
 spring.dubbo.application.name=consumer
 spring.dubbo.registry.address=zookeeper://127.0.0.1:2181
 spring.dubbo.protocol.name=dubbo
@@ -7,14 +7,19 @@ spring.dubbo.protocol.port=20890
 spring.dubbo.scan=dubboClient.dubbo
 
 
-spring.rocketmq.name-server=127.0.0.1:9876
-spring.rocketmq.producer.group=my-group
-spring.rocketmq.producer.retry-times-when-send-async-failed=0
-spring.rocketmq.producer.send-msg-timeout=300000
-spring.rocketmq.producer.compress-msg-body-over-howmuch=4096
-spring.rocketmq.producer.max-message-size=4194304
-spring.rocketmq.producer.retry-another-broker-when-not-store-ok=false
-spring.rocketmq.producer.retry-times-when-send-failed=2
+spring.rabbitmq.host=127.0.0.1
+spring.rabbitmq.port=5672
+spring.rabbitmq.username=guest
+spring.rabbitmq.password=guest
+
+#spring.rocketmq.name-server=127.0.0.1:9876
+#spring.rocketmq.producer.group=my-group
+#spring.rocketmq.producer.retry-times-when-send-async-failed=0
+#spring.rocketmq.producer.send-msg-timeout=300000
+#spring.rocketmq.producer.compress-msg-body-over-howmuch=4096
+#spring.rocketmq.producer.max-message-size=4194304
+#spring.rocketmq.producer.retry-another-broker-when-not-store-ok=false
+#spring.rocketmq.producer.retry-times-when-send-failed=2
 
 
 # REDIS (RedisProperties)
@@ -29,10 +34,10 @@ spring.redis.password=
 # 连接池最大连接数（使用负值表示没有限制）
 spring.redis.pool.max-active=8
 # 连接池最大阻塞等待时间（使用负值表示没有限制）
-spring.redis.pool.max-wait=-1
+spring.redis.pool.max-wait=1000
 # 连接池中的最大空闲连接
-spring.redis.pool.max-idle=8
+spring.redis.pool.max-idle=2
 # 连接池中的最小空闲连接
 spring.redis.pool.min-idle=0
 # 连接超时时间（毫秒）
-spring.redis.timeout=0
+spring.redis.timeout=1000
